--- a/style.css
+++ b/style.css
@@ -65,7 +65,23 @@ body{
     flex-basis: 20%;
     font-family: inherit;
     font-size: 24px;
-    height: 65px ;
+    height: 65px;
+}
+.calc-button:last-child{
+    backdrop-filter: blur(5.5px);
+    -webkit-backdrop-filter: blur(5.5px);
+    background: rgba(255, 255, 255, 0.75);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(35, 35, 35, 0.1);
+    color: #fff;
+    background: #d72880;
+}
+.calc-button:last-child:hover{
+    background-color: inherit;
+    color: inherit;
 
-
+}
+.calc-button:hover{
+    background-color: inherit;
 }
