--- a/style.css
+++ b/style.css
@@ -85,3 +85,12 @@ body{
 .calc-button:hover{
     background-color: inherit;
 }
+.calc-button:active{
+    background-color: #ffef78;
+}
+.double{
+    flex-basis: 47%;
+}
+.triple{
+    flex-basis: 73%;
+}
